# trading-ai-scafold

./: .gitignore  README.md  README_ANGELONE_LIVE.txt  README_OPTIONS.txt  pyproject.toml
data/: BANKNIFTY_5m_demo_signals_INSESS.csv  BANKNIFTY_5m_sample.csv
scripts/: fetch_hist.ps1  quick_diag.py  run_backtest.ps1  run_live.ps1  seq_backtest.py  seq_diag.py  seq_scalp.py
src/trading_ai/: __init__.py
src/trading_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/trading_ai/analytics/: metrics.py
src/trading_ai/angel/: opts.py
src/trading_ai/backtest/: sim.py
src/trading_ai/cli/: analyze.py  angel_hist.py  angel_login.py  compare.py  live_run.py  mtf_backtest.py  opts_pick.py  replay.py
src/trading_ai/data/: loader.py
src/trading_ai/indicators/: core.py
src/trading_ai/journal/: io.py
src/trading_ai/live/: aggregate.py  connector_angel.py
src/trading_ai/llm/: interface.py
src/trading_ai/options/: chooser.py
src/trading_ai/risk/: instruments.py  sizing.py  tick.py
src/trading_ai/rules/: filters.py
src/trading_ai/utils/: expiry.py
