
[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-ai"
version = "0.1.0"
description = "Hybrid Python + LLM trading pipeline for NIFTY/BANKNIFTY & midcaps"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="You"}]

dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "pandas-ta>=0.3.14b0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "coverage>=7.4.0",
    "black>=24.3.0",
    "ruff>=0.4.5",
    "mypy>=1.10.0",
    "types-python-dateutil",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
