
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-ai"
version = "0.5.0"
description = "Lightweight trading pipeline with local indicators, triggers, sizing, backtest, and analyzer"
authors = [{name="You"}]
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "numpy>=1.24", "python-dateutil>=2.8"]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]
